deployment/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: nginx # <--- Modern way to define Traefik
  rules:
  - host: argocd.12w.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http # <--- Using the port name 'http' is safer than '80'
